# inferena

./: .gitignore  Cargo.toml  README.md  _config.yml  index.md  requirements-apple.txt  requirements-common.txt  requirements-nvidia.txt  run.sh
.github/workflows/: check-md.yml  ci.yml  pages.yml
_layouts/: default.html
frameworks/burn/: Cargo.toml  run.sh
frameworks/burn/src/: main.rs
frameworks/candle/: Cargo.toml  run.sh
frameworks/candle/src/: main.rs
frameworks/ggml/: bench.py
frameworks/jax/: run.sh
frameworks/llama-cpp/: bench.py  convert_to_gguf.py  run.sh
frameworks/luminal/: Cargo.toml  run.sh
frameworks/luminal/src/: main.rs
frameworks/meganeura/: Cargo.toml  run.sh
frameworks/meganeura/src/: main.rs
frameworks/mlx/: bench.py
frameworks/onnxruntime/: bench.py  run.sh
frameworks/pytorch/: bench.py  run.sh
harness/: Cargo.toml
harness/src/: main.rs
models/: ResNet-50.md  SmolLM2-135M.md  SmolVLA.md  SmolVLM-256M.md  StableDiffusion.md  Whisper-tiny.md  download.sh  generate_weights.py
results/: SmolVLA_meganeura.json  SmolVLA_summary.json
scripts/: cargo-rev.sh  check_results_md.py
