[package]
name = "infermark-burn"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Burn framework benchmark runner for infermark"

[[bin]]
name = "infermark-burn"
path = "src/main.rs"

[dependencies]
burn = { version = "0.16", features = ["wgpu", "train"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
