[package]
name = "infermark-meganeura"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Meganeura framework benchmark runner for infermark"

[[bin]]
name = "infermark-meganeura"
path = "src/main.rs"

[dependencies]
# TODO: Add meganeura dependencies once crate/repo is identified.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
